--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -6,6 +6,10 @@
         </button>
         <h1 class="app-name" routerLink="/">Pedibus</h1>
         <span class="fill-remaining-space"></span>
+        <div *ngIf="isLogged" class="icon">
+            <mat-icon [inline]="true" role="img" aria-hidden="true" svgIcon="imageUser" matTooltip="{{userLogged}}">
+            </mat-icon>
+        </div>
         <button *ngIf="!isLogged && !isMobile" mat-button routerLink="/auth/login" routerOutlet="content">
             <span>Login</span>
         </button>
@@ -15,7 +19,8 @@
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile ? 60 : 0">
-        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
+        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'"
+            [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="isLogged" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="isLogged && isAdmin" routerLink="./admin">Admin</a>
