Traslate in english welcome component

--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -8,28 +8,27 @@
 <div class="components-grid">
     <div class="components-grid-cell">
         <mat-card class="info">
-            <h3>Cosa e' il Pedibus</h3>
+            <h3>What is the Pedibus</h3>
             <img src="../../../assets/fila.png" alt="" />
-            <p>Il Pedibus è un’iniziativa per accompagnare i bambini a piedi a scuola, sotto la supervisione di un
-                adulto. Conviviale, sano, economico ed ecologico, il Pedibus è un’invenzione che cambia la vita!</p>
+            <p>The Pedibus is an initiative to accompany children on foot to school, under the supervision of an adult.
+                Convivial, healthy, economic and ecological, the Pedibus is a life-changing invention!</p>
         </mat-card>
     </div>
     <div class="components-grid-cell">
         <mat-card class="info">
-            <h3>Come Funziona?</h3>
+            <h3>How does it work?</h3>
             <img src="../../../assets/bus.png" alt="" />
-            <p>Come un vero e proprio autobus, il Pedibus rispetta un orario, segue un percorso e ha i propri
-                conducenti. L’unica differenza è che si tratta di un autobus a piedi, organizzato e gestito dai
-                genitori.</p>
+            <p>Like a real bus, the Pedibus respects a schedule, follows a route and has its own drivers. The only
+                difference is that it is a walking bus, organized and managed by the parents.</p>
         </mat-card>
     </div>
     <div class="components-grid-cell">
         <mat-card class="info">
-            <h3>Le nostre linee</h3>
+            <h3>Our Lines</h3>
             <img src="../../../assets/map.jpg" alt="" />
-            <p>Le nostre linee coprono quasi tutto il territorio della citta di Torino. Se fossero necessarie altre
-                Linee possono essere indicate agli amministratori.</p>
-            <button mat-raised-button color="accent" routerLink="./lines">Scopri</button>
+            <p>Our lines cover almost the entire territory of the city of Turin. If other lines are necessary they can
+                be indicated to the administrators.</p>
+            <button mat-raised-button color="accent" routerLink="./lines">See More</button>
         </mat-card>
     </div>
 </div>
