--- a/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
+++ b/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
@@ -12,11 +12,11 @@
                 </ng-container>
                 <ng-container matColumnDef="initialStop">
                     <th mat-header-cell *matHeaderCellDef>Initial stop</th>
-                    <td mat-cell *matCellDef="let race">{{race.companion.initialStop.name}}</td>
+                    <td mat-cell *matCellDef="let race">{{race.companion.initialStop.name}}, {{getTime(race.date.getTime()+race.companion.initialStop.delayInMillis)}}</td>
                 </ng-container>
                 <ng-container matColumnDef="finalStop">
                     <th mat-header-cell *matHeaderCellDef>Final stop</th>
-                    <td mat-cell *matCellDef="let race">{{race.companion.finalStop.name}}</td>
+                    <td mat-cell *matCellDef="let race">{{race.companion.finalStop.name}}, {{getTime(race.date.getTime()+race.companion.finalStop.delayInMillis)}}</td>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
