--- a/Project/Client/src/styles.css
+++ b/Project/Client/src/styles.css
@@ -2915,3 +2915,39 @@ td.mat-cell:first-of-type {
 .min-width {
     width: min-content;
 }
+
+.max-width {
+    width: max-content;
+}
+
+.m-t-8 {
+    margin-top: 8px;
+}
+
+.m-b-8 {
+    margin-bottom: 8px;
+}
+
+.m-l-8 {
+    margin-left: 8px;
+}
+
+.m-r-8 {
+    margin-right: 8px;
+}
+
+.p-t-8 {
+    padding-top: 8px;
+}
+
+.p-b-8 {
+    padding-bottom: 8px;
+}
+
+.p-l-8 {
+    padding-left: 8px;
+}
+
+.p-r-8 {
+    padding-right: 8px;
+}
