--- a/Project/Client/src/app/components/admin/races-management/races-management.component.html
+++ b/Project/Client/src/app/components/admin/races-management/races-management.component.html
@@ -87,6 +87,13 @@
                         {{element.companions.length}} </td>
                 </ng-container>
 
+                <!-- State Column -->
+                <ng-container matColumnDef="State">
+                    <th class="center-vertical centered-text" mat-header-cell *matHeaderCellDef> State</th>
+                    <td mat-cell class="center-vertical centered-text" *matCellDef="let element">{{element.raceState}}
+                    </td>
+                </ng-container>
+
                 <!-- Edit-Action Column -->
                 <ng-container matColumnDef="Remove-Action">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef></th>
