Added component for view line and add child

--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -2,6 +2,7 @@
 <div class="components-grid">
     <app-companion-requests class="components-grid-cell"></app-companion-requests>
     <app-register class="components-grid-cell"></app-register>
+    <app-lines-management class="components-grid-cell"></app-lines-management>
     <app-races-management class="components-grid-cell"></app-races-management>
     <app-users-management class="components-grid-cell"></app-users-management>
 </div>
