--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,8 +1,12 @@
 <h3 class="centered-text">ADMINISTRATION SECTION</h3>
-<div class="components-grid">
-    <app-companion-requests class="components-grid-cell"></app-companion-requests>
-    <app-register class="components-grid-cell"></app-register>
-    <app-lines-management class="components-grid-cell"></app-lines-management>
-    <app-races-management class="components-grid-cell"></app-races-management>
-    <app-users-management class="components-grid-cell"></app-users-management>
+<div>
+    <div class="components-grid border">
+        <app-register class="components-grid-cell"></app-register>
+        <app-users-management class="components-grid-cell"></app-users-management>
+        <app-lines-management class="components-grid-cell"></app-lines-management>
+    </div>
+    <div class="components-grid">
+        <app-companion-requests class="components-grid-cell"></app-companion-requests>
+        <app-races-management class="components-grid-cell"></app-races-management>
+    </div>
 </div>
