--- a/Project/Client/src/app/components/parent/parent.component.css
+++ b/Project/Client/src/app/components/parent/parent.component.css
@@ -1,26 +1,30 @@
-td,
-th {
-    text-align: left;
-    padding-right: 10px;
-    vertical-align: center;
-    padding-bottom: 0px;
-}
 
-table:last-of-type{
-    margin-bottom: 20px;
-}
-
-.no-scroll {
-    overflow: initial;
-}
-
-.title {
+mat-card {
+    max-width: 400px;
     text-align: center;
+}
+
+mat-form-field {
+    padding-left: 8px;
+    padding-right: 8px;
+    width: 80%;
+}
+
+.form-error {
+    margin: 8px;
+}
+
+mat-spinner {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.border{
+    
     margin: 0px 0px 4px 0px;
     border-bottom: #c8c8c8 1px solid;
     width: 100%
-}
-
-.mat-raised-button {
-    text-align: center
 }
