Added status race and fix problems

--- a/Project/Client/src/app/components/companion/races-companion/give-availability-dialog/give-availability.dialog.html
+++ b/Project/Client/src/app/components/companion/races-companion/give-availability-dialog/give-availability.dialog.html
@@ -12,7 +12,7 @@
         </mat-form-field>
 
         <!-- FinalStop selection -->
-        <mat-form-field class="block">
+        <mat-form-field>
             <mat-label>FinalStop</mat-label>
             <mat-select [(value)]="finalStop">
                 <mat-option *ngFor="let stop of stops" [value]="stop">
