--- a/Project/Client/src/styles.css
+++ b/Project/Client/src/styles.css
@@ -2796,8 +2796,10 @@ th.mat-header-cell {
 }
 
 .mat-snack-bar-container {
-    color: rgba(255, 255, 255, .7);
-    background: #323232;
+    color: #fff;
+    /*rgba(255, 255, 255, .7);*/
+    background: #f44336;
+    text-align: center;
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12)
 }
 
@@ -2832,6 +2834,18 @@ th.mat-header-cell {
 
 .block {
     display: block;
+}
+
+.flex {
+    display: flex;
+}
+
+.initial {
+    display: initial;
+}
+
+.inline-block {
+    display: inline-block;
 }
 
 .inline-grid {
@@ -2950,4 +2964,11 @@ td.mat-cell:first-of-type {
 
 .p-r-8 {
     padding-right: 8px;
+}
+
+.absolute-center-vertical {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    width: fit-content;
 }
