--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -12,11 +12,13 @@
         </div> -->
         <span *ngIf="isLogged" class="username center-vertical">{{loggedUser?.name}} {{loggedUser?.surname}}</span>
         <button mat-icon-button [matMenuTriggerFor]="notificationsMenu" *ngIf="isLogged">
-            <mat-icon matBadge="{{unreadCount}}" [matBadgeHidden]="unreadCount==0" matBadgePosition="above after" matBadgeColor="warn">notifications</mat-icon>
+            <mat-icon matBadge="{{unreadCount}}" [matBadgeHidden]="unreadCount==0" matBadgePosition="above after"
+                matBadgeColor="warn">notifications</mat-icon>
         </button>
         <mat-menu #notificationsMenu="matMenu" yPosition="below">
             <div class="padded notifications">
-                <table class="mat-table" *ngIf="notifications && notifications.length>0" class="center-horizontal center-vertical">
+                <table class="mat-table" *ngIf="notifications && notifications.length>0"
+                    class="center-horizontal center-vertical">
                     <thead>
                         <tr>
                             <th class="mat-header-cell">Sender</th>
@@ -25,14 +27,16 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let notification of notifications" [ngClass]="{ 'unread': notification.unread }" (click)="openNotification(notification)">
+                        <tr *ngFor="let notification of notifications" [ngClass]="{ 'unread': notification.unread }"
+                            (click)="openNotification(notification)">
                             <td class="mat-cell">{{notification.sender}}</td>
                             <td class="mat-cell">{{notification.message}}</td>
                             <td class="mat-cell">{{notification.date.toLocaleString()}}</td>
                         </tr>
                     </tbody>
                 </table>
-                <span *ngIf="!notifications || notifications.length==0" class="marged padded center-horizontal center-vertical">No Notifications</span>
+                <span *ngIf="!notifications || notifications.length==0"
+                    class="marged padded center-horizontal center-vertical">No Notifications</span>
             </div>
         </mat-menu>
         <button *ngIf="!isLogged && !isMobile" mat-button routerLink="/auth/login" routerOutlet="content">
@@ -44,12 +48,13 @@
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile ? 60 : 0">
-        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
+        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'"
+            [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="isLogged" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="isLogged && isAdmin" routerLink="./admin">Admin</a>
                 <a mat-list-item *ngIf="isLogged && isCompanion" routerLink="./companion">Companion</a>
-                <a mat-list-item *ngIf="isLogged" routerLink="./parent">Parent</a>
+                <a mat-list-item *ngIf="isLogged && hasChildren" routerLink="./parent">Parent</a>
                 <a mat-list-item routerLink="./lines">Lines</a>
                 <a mat-list-item *ngIf="isLogged" routerLink="./account">My Account</a>
                 <a *ngIf="!isLogged && isMobile" mat-list-item routerLink="/auth/login">
